<resources>
    <string name="app_name">Angler</string>
    <string name="shared_preferences_file">com.mnemo.angler.preferences</string>
    <string name="trial_version">trial version</string>
    <string name="music_player">Music Player</string>
    <string name="library">Library</string>
    <string name="playlist_manager">Playlists</string>
    <string name="albums">Albums</string>
    <string name="local_and_cached_only">local &amp; cached only</string>
    <string name="change_background">Background</string>
    <string name="equalizer">Equalizer</string>
    <string name="extras">Extras</string>
    <string name="purchase">Purchase Angler</string>
    <string name="settings">settings</string>
    <string name="background_image">background_image</string>
    <string name="playlist">playlist</string>
    <string name="artists">Artists</string>
    <string name="image_carousel_advice_text">swipe left/right to change image</string>
    <string name="image_folder_item">image in folder</string>
    <string name="menu">menu</string>
    <string name="back">back</string>
    <string name="select">select</string>
    <string name="delete_this_background_image">Delete this background image?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="ok">ok</string>
    <string name="delete">delete</string>
    <string name="cancel">Cancel</string>
    <string name="load">load</string>
    <string name="load_image">Load image</string>
    <string name="default_text">default</string>
    <string name="set_default_overlay">set default overlay</string>
    <string name="accept">accept</string>
    <string name="background_added">Background added</string>
    <string name="abc_scroll">ABC scroll</string>
    <string name="abc_scroll_decription">Add button on main screen  that allow to sort playlist alphabetically and scroll</string>
    <string name="lyrics_on_tap">Lyrics on tap</string>
    <string name="lyrics_on_tap_description">Tap on currently playing track to display lyrics</string>
    <string name="rename">Rename</string>
    <string name="change_cover">Change cover</string>
    <string name="add_tracks_to_playlist">Add tracks to playlist</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="delete_playlist_answer">Are you sure you want delete this playlist?</string>
    <string name="enter_new_playlist_title">Enter new playlist title</string>
    <string name="playlist_empty_tip">There are no tracks in playlist yet. Select add tracks in dropdown menu to fill playlist</string>
    <string name="default_playlist_visibility">Default playlist visibility</string>
    <string name="playlist_image_transition">Playlist image transition</string>
    <string name="local_load_image_transition">Local load image transition</string>
    <string name="add">add</string>
    <string name="context_menu_play">Play</string>
    <string name="context_menu_lyrics">Lyrics</string>
    <string name="context_menu_go_to_album">Go to album</string>
    <string name="context_menu_go_to_artist">Go to artist</string>
    <string name="context_menu_add_to_playlist">Add to playlist</string>
    <string name="context_menu_move">Move</string>
    <string name="context_menu_remove_from_playlist">Remove from playlist</string>
    <string name="context_menu_transfer">Transfer to another storage</string>
    <string name="context_menu_delete">Delete</string>
    <string name="service">Service</string>
    <string name="storage">Storage</string>
    <string name="updating_library">Updating library...</string>
    <string name="new_playlist">New playlist</string>
    <string name="playlist_name_is_empty">Playlist name is empty</string>
    <string name="playlist_name_reserved">Playlist name reserved</string>
    <string name="playlist_name_in_used">Playlist name already in used</string>
    <string name="too_many_symbols_in_playlist_name">Too many symbols in playlist name</string>
    <string name="incorrect_playlist_name">Incorrect playlist name</string>
    <string name="track_removed">1 track removed</string>
    <string name="undo">Undo</string>
    <string name="add_new_source">Add new source</string>
    <string name="add_track_to_playlist">Add track to playlist</string>
    <string name="close">Close</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="empty_playlist">Playlist is empty</string>
    <string name="hide">Hide</string>
    <string name="portrait_crop_advice">crop background for portrait orientation</string>
    <string name="landscape_crop_advice">crop background for landscape orientation</string>
    <string name="album_cover_crop_advice">crop image for playlist cover</string>
    <string name="crop">crop</string>
    <string name="search">search</string>
    <string name="search_hint">type keyword here...</string>
    <string name="search_empty_tracks">no tracks found</string>
    <string name="search_empty_artists">no artists found</string>
    <string name="empty_playlist_play_warning">No tracks in this playlist!</string>
    <string name="play">play</string>
    <string name="save">save</string>
    <string name="create">create</string>
    <string name="configure_playlist">Configure playlist</string>
    <string name="tracks">tracks:</string>
    <string name="queue">Queue</string>
    <string name="play_all">Play all</string>
    <string name="play_now">Play now</string>
    <string name="play_next">Play next</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="empty_queue">Queue is empty</string>
    <string name="added_to">added to</string>
    <string name="opacity">opacity</string>
    <string name="custom">Custom</string>
    <string name="audio_effects">Audio effects</string>
    <string name="virtualizer">Virtualizer</string>
    <string name="bass_boost">Bass boost</string>
    <string name="amplifier">Amplifier</string>
    <string name="created">created</string>
    <string name="bio">bio</string>
    <string name="refresh_artists_images">Refresh artists images</string>
    <string name="portrait_crop">Portrait crop</string>
    <string name="landscape_crop">Landscape crop</string>
    <string name="image_crop">Image crop</string>
    <string name="library_updated">Library updated</string>
    <string name="artist_images_updated">Artist images updated</string>

</resources>
