<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/context_menu_play"
        style="@style/contextual_menu_item"
        android:text="@string/context_menu_play"/>

    <TextView
        android:id="@+id/context_menu_lyrics"
        style="@style/contextual_menu_item"
        android:text="@string/context_menu_lyrics"/>

    <TextView
        android:id="@+id/context_menu_go_to_album"
        style="@style/contextual_menu_item"
        android:visibility="gone"
        android:text="@string/context_menu_go_to_album"/>

    <TextView
        android:id="@+id/context_menu_go_to_artist"
        style="@style/contextual_menu_item"
        android:visibility="gone"
        android:text="@string/context_menu_go_to_artist"/>

    <TextView
        android:id="@+id/context_menu_add"
        style="@style/contextual_menu_item"
        android:text="@string/context_menu_add_to_playlist"/>

    <TextView
        android:id="@+id/context_menu_move"
        style="@style/contextual_menu_item"
        android:visibility="gone"
        android:text="@string/context_menu_move"/>

    <TextView
        android:id="@+id/context_menu_remove_from_playlist"
        style="@style/contextual_menu_item"
        android:visibility="gone"
        android:text="@string/context_menu_remove_from_playlist"/>


</LinearLayout>