<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/softMainGrey"
    android:orientation="vertical"
    android:paddingBottom="@dimen/half_margin"
    android:paddingTop="@dimen/half_margin">

    <TextView
        android:id="@+id/play_all_play_now"
        style="@style/contextual_menu_item"
        android:text="@string/play_now" />

    <TextView
        android:id="@+id/play_all_play_next"
        style="@style/contextual_menu_item"
        android:text="@string/play_next" />

    <TextView
        android:id="@+id/play_all_add_to_queue"
        style="@style/contextual_menu_item"
        android:text="@string/add_to_queue" />

</LinearLayout>