<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/softMainGrey"
    android:paddingBottom="8dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:orientation="vertical"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">

        <TextView
            android:id="@+id/context_menu_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/default_margin"
            android:paddingEnd="@dimen/default_margin"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            tools:text="Sweet dreams"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/context_menu_artist"
            app:layout_constraintVertical_chainStyle="packed"/>

        <TextView
            android:id="@+id/context_menu_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/default_margin"
            android:paddingEnd="@dimen/default_margin"
            android:textSize="12sp"
            tools:text="Marylin Manson"
            android:textColor="@color/gGrey"
            app:layout_constraintTop_toBottomOf="@id/context_menu_title"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <android.support.v7.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="2dp">

            <ImageView
                android:id="@+id/context_menu_album_cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:src="@drawable/back3"
                android:scaleType="centerCrop" />

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gGrey"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"/>

    <TextView
        android:id="@+id/context_menu_play"
        style="@style/contextual_menu_item"
        android:text="@string/context_menu_play"/>

    <TextView
        android:id="@+id/context_menu_play_next"
        style="@style/contextual_menu_item"
        android:text="@string/play_next"/>

    <TextView
        android:id="@+id/context_menu_add_to_queue"
        style="@style/contextual_menu_item"
        android:text="@string/add_to_queue"/>

    <TextView
        android:id="@+id/context_menu_add_to_playlist"
        style="@style/contextual_menu_item"
        android:text="@string/context_menu_add_to_playlist"/>

    <TextView
        android:id="@+id/context_menu_go_to_artist"
        style="@style/contextual_menu_item"
        android:visibility="gone"
        android:text="@string/context_menu_go_to_artist"/>

    <TextView
        android:id="@+id/context_menu_go_to_album"
        style="@style/contextual_menu_item"
        android:visibility="gone"
        android:text="@string/context_menu_go_to_album"/>

    <TextView
        android:id="@+id/context_menu_remove_from_playlist"
        style="@style/contextual_menu_item"
        android:visibility="gone"
        android:text="@string/context_menu_remove_from_playlist"/>


</LinearLayout>