<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/softMainGrey"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/delete_playlist_answer"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/playlist_delete_no"
            style="@style/yes_no_bottom_button"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="-1dp"
            android:layout_weight="1"
            android:text="@string/no" />

        <TextView
            android:id="@+id/playlist_delete_yes"
            style="@style/yes_no_bottom_button"
            android:layout_marginEnd="-1dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:text="@string/yes" />

    </LinearLayout>

</LinearLayout>