<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".ui.main_activity.fragments.music_player.music_player.MusicPlayerFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/toolbar"
        android:background="@color/softMainGrey"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/settings"
            style="@style/button"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/settings"
            android:src="@drawable/menu"
            app:layout_constraintStart_toStartOf="parent"/>

        <Spinner
            android:id="@+id/main_fragment_playlist_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:backgroundTint="@color/gGrey"
            app:layout_constraintStart_toEndOf="@id/settings"
            app:layout_constraintEnd_toStartOf="@id/search"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/search"
            style="@style/button"
            android:layout_marginStart="4dp"
            android:alpha="0.2"
            android:contentDescription="@string/search"
            android:src="@drawable/search"
            app:layout_constraintEnd_toStartOf="@id/playlist"/>

        <ImageButton
            android:id="@+id/playlist"
            style="@style/button"
            android:alpha="0.6"
            android:contentDescription="@string/playlist"
            android:src="@drawable/tracks"
            app:layout_constraintEnd_toStartOf="@id/artists"/>

        <ImageButton
            android:id="@+id/artists"
            style="@style/button"
            android:layout_marginEnd="4dp"
            android:alpha="0.2"
            android:contentDescription="@string/artists"
            android:src="@drawable/artists"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/softMainGrey"
        android:paddingEnd="0dp"
        android:paddingStart="32dp"
        app:closeIcon="@drawable/baseline_clear_black_24dp"
        app:queryHint="@string/search_hint"
        app:searchHintIcon="@null"
        app:iconifiedByDefault="false"
        app:searchIcon="@null"/>

    <FrameLayout
        android:id="@+id/song_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/toolbar_height"/>

    <FrameLayout
        android:id="@+id/artist_song_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/toolbar_height"/>


</androidx.constraintlayout.widget.ConstraintLayout>


