<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main_activity.fragments.background_changer.background_changer.BackgroundChangerFragment">

    <ImageView
        android:id="@+id/overlay_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/toolbar_height"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"/>

    <FrameLayout
        android:id="@+id/overlay_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/toolbar_height"
        tools:background="#CC000000" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/background_changer_toolbar"
        style="@style/toolbar"
        android:background="@color/softMainGrey"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/background_changer_drawer_back"
            style="@style/button"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/settings"
            android:src="@drawable/menu" />

        <TextView
            style="@style/title"
            android:text="@string/change_background" />

        <ImageView
            android:id="@+id/background_changer_select_background"
            style="@style/button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="@dimen/half_margin"
            android:layout_gravity="end"
            android:layout_marginEnd="4dp"
            android:alpha="0.2"
            android:contentDescription="@string/select"
            android:src="@drawable/set_background" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/background_changer_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:clipToPadding="false"
        android:elevation="4dp"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/half_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/opacity"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/overlay_seekbar"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/overlay_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/three_quaters_margin"
        android:max="255"
        android:progressBackgroundTint="@color/white"
        android:progressTint="@color/colorAccentLight"
        android:thumbTint="@color/colorAccentLight"
        app:layout_constraintBottom_toTopOf="@id/background_changer_recycler_view" />

</androidx.constraintlayout.widget.ConstraintLayout>
