<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".drawer_items_fragments.local_load.PortraitCropFragment">

    <com.steelkiwi.cropiwa.CropIwaView
        android:id="@+id/fragment_portrait_crop_iwa"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:ci_dynamic_aspect_ratio="false"
        app:ci_aspect_ratio_w="410"
        app:ci_aspect_ratio_h="540"
        app:ci_border_width="0dp"
        app:ci_corner_width="0dp"
        app:ci_grid_width="1dp"
        app:ci_grid_color="#66FFFFFF"
        app:ci_crop_scale="1"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:background="#FFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/portrait_crop_advice"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/fragment_portrait_crop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/fragment_portrait_back"
            style="@style/portrait_options"
            android:layout_marginEnd="1dp"
            android:text="@string/back"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fragment_portrait_crop"/>

        <TextView
            android:id="@+id/fragment_portrait_crop"
            style="@style/portrait_options"
            android:layout_marginStart="1dp"
            android:text="@string/crop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/fragment_portrait_back"/>

    </android.support.constraint.ConstraintLayout>


</LinearLayout>
