<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            style="@style/dialog_title"
            android:text="@string/manage_tracks"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/manage_tracks_clear_button"
            style="@style/button"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/delete_playlist"
            android:src="@drawable/baseline_delete_sweep_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        style="@style/line"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/manage_tracks_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:clipToPadding="false"/>

    <View
        style="@style/line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/manage_tracks_cancel"
            style="@style/yes_no_bottom_button"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="-1dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/manage_tracks_save"
            style="@style/yes_no_bottom_button"
            android:layout_marginEnd="-1dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:alpha="0.3"
            android:enabled="false"
            android:text="@string/save" />

    </LinearLayout>

</LinearLayout>